# Nutrition-Agent

./: .env  .env.example  .flake8  GEMINI.md  LICENSE  README.md  app.py  config.py  knowledge_base.md  nutrition_agent.py  nutrition_database.py  pyproject.toml  requirements-lock.txt  requirements.txt  system_prompt.md  user_memory.py
.promptx/: pouch.json
.promptx/resource/: project.registry.json
.promptx/resource/roles/: assistant.json
data/: nutrition_data.csv  user_data.json
data/faiss_index/: index.faiss  index.pkl
tests/: test_nutrition_agent.py  test_nutrition_database.py  test_user_memory.py
tests/tools/: test_diet_advice_tool.py  test_nutrition_query_tool.py
tools/: daily_log_tool.py  diet_advice_tool.py  nutrition_qa_tool.py  nutrition_query_tool.py  report_generation_tool.py  usda_food_search_tool.py
user_profiles/: system_prompt_generator.json  user_001.json  user_002.json  user_003.json  user_004.json  user_005.json  user_006.json  user_007.json  user_008.json  user_009.json  user_010.json  user_011.json  user_012.json  user_013.json  user_014.json  user_015.json  user_016.json  user_017.json  user_018.json  user_019.json  user_020.json
